--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <div id="logo">
-                <img src="imagenes/icons8_overwolf_80px_1.png" alt="Logo">
+                <img src="imagenes/cropped-logo-1 (1).webp" alt="Logo" style="width: 80px;">
                 <h1>WolfPack Productions</h1>
             </div>
             <div id="links">
