--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Overwolf</title>
+    <title>KittyManga</title>
     <link rel="stylesheet" href="estilo.css">
     <link rel="icon" href="imagenes/icons8_overwolf_80px_1.png">
 </head>
