--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <header>
         <nav>
             <div id="logo">
-                <img src="imagenes/cropped-logo-1 (1).webp" alt="Logo" style="width: 80px;">
-                <h1>WolfPack Productions</h1>
+                <img src="imagenes/" alt="Logo" style="width: 80px;">
+                <h1>KuruManga</h1>
             </div>
             <div id="links">
-                <a href="#">About</a>
-                <a href="#">Work</a>
+                <a href="#"></a>
+                <a href="#">Novedades</a>
                 <a href="#">Services</a>
                 <a href="#">Team</a>
                 <a href="#">Blog</a>
@@ -36,41 +36,9 @@
         </div>
     </header>
     <section>
-        <div class="header">
-            <h1>MEET PROXY</h1>
-        </div>
-        <div class="content">
-            <div class="left">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, in eveniet. Officiis ipsum
-                    consequuntur aspernatur hic voluptates libero voluptatem, voluptatibus qui? Similique, esse at sint
-                    totam
-                    libero mollitia reprehenderit cupiditate minus unde debitis maiores consequuntur eos, aut
-                    exercitationem
-                    minima distinctio!</p>
-                <h6>EASILY EDIT AND REARRANGE THE HOMEPAGE STRUCTURE</h6>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, in eveniet. Officiis ipsum
-                    consequuntur aspernatur hic voluptates libero voluptatem, voluptatibus qui? Similique, esse at sint
-                    totam
-                    libero mollitia reprehenderit cupiditate minus unde debitis maiores consequuntur eos, aut
-                    exercitationem
-                    minima distinctio!</p>
-            </div>
-            <div class="right">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia rerum quae eligendi ex laudantium,
-                    doloribus ratione in veritatis aperiam ipsum!</p>
-                <h6>IS IT RETINA DISPLAY READY?</h6>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia rerum quae eligendi ex laudantium,
-                    doloribus ratione in veritatis aperiam ipsum!</p>
-                <div class="iconos">
-                    <img src="imagenes/facebook.png" alt="">
-                    <img src="imagenes/twitter.png" alt="">
-                    <img src="imagenes/youtube.png" alt="">
-                    <img src="imagenes/instagram.png" alt="">
-                    <img src="imagenes/linkedin.png" alt="">
-                </div>
-            </div>
-        </div>
+        
     </section>
+    
     <footer>
 
     </footer>
