--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KuruMangas | Tienda de Mangas</title>
+    <title>KuruMangas Store | Tienda de mangas</title>
     
     <link rel="icon" href="imagenes/icon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -18,8 +18,7 @@
     <header>
         <nav>
             <div id="logo">
-                <img src="imagenes/pngegg.png" alt="logo" style="width: 80px; height: auto;">
-                <h1>KuruMangas</h1>
+                <img src="imagenes/logokk.webp" alt="logo" >
             </div>
             <div id="links">
                 <a href="#">Inicio</a>
@@ -105,7 +104,7 @@
           <div class="card" style="width: 13rem;">
             <div class="card-image" id="card-1" title="jajajj"></div>
             <div class="card-body">
-              <h5>IVREA ESP</h5>
+              <h5 class="editorial">IVREA ESP</h5>
               <h6 class="card-title">SPY X FAMILY 01</h6>
               <p class="card-text">$ 11.990</p>
               <a href="#" class="btn btn-primary">Añadir al carro</a>
@@ -115,19 +114,19 @@
           <div class="card" style="width: 13rem;">
             <div  class="card-image" id="card-2"></div>
             <div class="card-body">
-              <h5>IVREA ESP</h5>
-              <h6 class="card-title">BERSERK MAXIMUM 01</h6>
-              <p class="card-text">$ 25.990</p>
+              <h5 class="editorial">IVREA ESP</h5>
+              <h6 class="card-title">VAGABOND</h6>
+              <p class="card-text">$ 19.990</p>
               <a href="#" class="btn btn-primary">Añadir al carro</a>
             </div>
           </div>
           
           <div class="card" style="width: 13rem;">
             <div  class="card-image" id="card-3"></div>
-            <div class="card-body">GUARDIANES DELA NOCHE 01
-              <h5>NORMA ESP</h5>
-              <h6 class="card-title"></h6>
-              <p class="card-text">$ 25.990</p>
+            <div class="card-body">
+              <h5 class="editorial">NORMA</h5>
+              <h6 class="card-title">KIMETSU NO YAIBA 01</h6>
+              <p class="card-text">$ 17.000</p>
               <a href="#" class="btn btn-primary">Añadir al carro</a>
             </div>
           </div>
@@ -135,9 +134,9 @@
           <div class="card" style="width: 13rem;">
             <div  class="card-image" id="card-4"></div>
             <div class="card-body">
-              <h5>PLANETA CÓMIC </h5>
+              <h5 class="editorial">PLANETA CÓMIC </h5>
               <h6 class="card-title">20TH CENTURY BOYS 03 </h6>
-              <p class="card-text">$ 25.990</p>
+              <p class="card-text">$ 15.990</p>
               <a href="#" class="btn btn-primary">Añadir al carro</a>
             </div>
           </div>
@@ -145,9 +144,9 @@
           <div class="card" style="width: 13rem;">
             <div  class="card-image" id="card-5"></div>
             <div class="card-body">
-              <h5>IVREA ESP</h5>
+              <h5 class="editorial">IVREA ESP</h5>
               <h6 class="card-title">SLAM DUNK</h6>
-              <p class="card-text">$ 25.990</p>
+              <p class="card-text">$ 35.990</p>
               <a href="#" class="btn btn-primary">Añadir al carro</a>
             </div>
           </div>
@@ -155,9 +154,9 @@
           <div class="card" style="width: 13rem;">
             <div  class="card-image" id="card-6"></div>
             <div class="card-body">
-              <h5>NORMA EDITORIAL</h5>
+              <h5 class="editorial">NORMA EDITORIAL</h5>
               <h6 class="card-title">JUJUTSU KAISEN</h6>
-              <p class="card-text">$ 25.990</p>
+              <p class="card-text">$ 24.990</p>
               <a href="#" class="btn btn-primary">Añadir al carro</a>
             </div>
           </div>
@@ -165,9 +164,9 @@
           <div class="card" style="width: 13rem;">
             <div  class="card-image" id="card-7"></div>
             <div class="card-body">
-              <h5 >MILKY WAY</h5>
+              <h5 class="editorial">MILKY WAY</h5>
               <h6 class="card-title">BLUE PERIOD</h6>
-              <p class="card-text">$ 25.990</p>
+              <p class="card-text">$ 7.990</p>
               <a href="#" class="btn btn-primary">Añadir al carro</a>
             </div>
           </div>
@@ -175,9 +174,9 @@
           <div class="card" style="width: 13rem;">
             <div  class="card-image" id="card-8"></div>
             <div class="card-body">
-              <h5 >NORMA EDITORIAL</h5>
+              <h5 class="editorial">NORMA EDITORIAL</h5>
               <h6 class="card-title">AKIRA</h6>
-              <p class="card-text">$ 25.990</p>
+              <p class="card-text">$ 34.990</p>
               <a href="#" class="btn btn-primary">Añadir al carro</a>
             </div>
           </div>
