--- a/Promociones.html
+++ b/Promociones.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nosotros</title>
-    <link rel="icon" href="imagenes/logokk.webp">
+    <title>Promociones y ofertas - KuruMangas</title>
+    <link rel="icon" href="imagenes/iconno.svg">
     <link rel="stylesheet" href="estilo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 
@@ -17,14 +17,14 @@
             <img src="imagenes/logo2pagina.svg" alt="logo" />
           </div>
           <div id="links">
-            <a href="#">Inicio</a>
-            <a href="#">Novedades</a>
-            <a href="#">Catalogo</a>
-            <a href="#">Promociones</a>
+            <a href="index.html">Inicio</a>
+            <a href="Novedades.html">Novedades</a>
+            <a href="Catalogo.html">Catalogo</a>
+            <a href="Promociones.html">Promociones</a>
             <a href="Nosotros.html">Nosotros</a>
           </div>
           <div class="shopping-cart">
-            <a href="#" target="_top"><img src="imagenes/Shopping Cart.svg" alt=""></a>
+            <a href="#" target="_blank"><img src="imagenes/Shopping Cart.svg" alt="carrito de compras"></a>
             <p>Carrito</p>
           </div>
         </nav>
@@ -75,10 +75,10 @@
   
               <h4>Contacto</h4>
               <div class="social-link">
-               <a href="" target="_blank"><i class="fab fa-facebook-f"></i></a>
-               <a href="" target="_blank"><i class="fab fa-instagram"></i></a>
-               <a href="https://twitter.com/KuruMangas" target="_blank"><i class="fab fa-twitter"></i></a>
-               <a href="" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+             <a href="https://www.instagram.com/kurumangas?utm_source=ig_web_button_share_sheet&igsh=MzJiMzQ5ZWQ2Mw== " target="_blank"><i class="fab fa-instagram"></i></a>
+             <a href="https://www.facebook.com/people/Kuru-Mangas/pfbid02cDtnRDqFjepoNicQhkuEwfjNtDgUdV3WVHALkVENBucxR7cX1reT9cbi6jdZfxDzl/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+             <a href="https://twitter.com/KuruMangas" target="_blank"><i class="fab fa-twitter"></i></a>
+              
               </div>
   
             </div>
