--- a/Catalogo.html
+++ b/Catalogo.html
@@ -1,93 +1,137 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nosotros</title>
-    <link rel="icon" href="imagenes/logokk.webp">
-    <link rel="stylesheet" href="estilo.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-
-</head>
-<body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Todo KuruMangas Disponible - KuruMangas</title>
+    <link rel="icon" href="imagenes/iconno.svg" />
+    <link rel="stylesheet" href="estilo.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    />
+  </head>
+  <body>
     <header>
-        <nav>
-          <div id="logo">
-            <img src="imagenes/logo2pagina.svg" alt="logo" />
-          </div>
-          <div id="links">
-            <a href="#">Inicio</a>
-            <a href="#">Novedades</a>
-            <a href="#">Catalogo</a>
-            <a href="#">Promociones</a>
-            <a href="Nosotros.html">Nosotros</a>
-          </div>
-          <div class="shopping-cart">
-            <a href="#" target="_top"><img src="imagenes/Shopping Cart.svg" alt=""></a>
-            <p>Carrito</p>
-          </div>
-        </nav>
+      <nav>
+        <div id="logo">
+          <img src="imagenes/logo2pagina.svg" alt="logo" />
+        </div>
+        <div id="links">
+          <a href="index.html">Inicio</a>
+          <a href="Novedades.html">Novedades</a>
+          <a href="Catalogo.html">Catalogo</a>
+          <a href="Promociones.html">Promociones</a>
+          <a href="Nosotros.html">Nosotros</a>
+        </div>
+        <div class="shopping-cart">
+          <a href="#" target="_top"
+            ><img src="imagenes/Shopping Cart.svg" alt=""
+          /></a>
+          <p>Carrito</p>
+        </div>
+      </nav>
     </header>
 
+    <div class="contenedor">
+      <div class="row-container">
+        <div class="left">
+          <div
+            class="yith-wcan-filter filter-tax checkbox-design"
+            id="filter_259076_6"
+            data-filter-type="tax"
+            data-filter-id="6"
+            data-taxonomy="filter_editorial"
+            data-multiple="yes"
+            data-relation="and"
+          >
+            <h4 class="title">Editorial</h4>
+            <div class="content">
+              <ul class="items ">
+                <li class="item">
+                  <label for="editorial-1">
+                    <input
+                      type="checkbox"
+                      id="editorial-1"
+                      name="filter[259076][6]"
+                      value="arechi-manga"
+                    />
+
+                    <a
+                      href="#"
+                      role="button"
+                      class="term-label"
+                    >
+                      Arechi Manga
+                    </a>
+                  </label>
+                </li>
+
+                
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="right">
+          <div class="cuerpo">
+            <div class="coleccion"></div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <footer class="footer">
-
-        <div class="container2">
-  
-          <div class="footer-row">
-  
-            <div class="footer-links">
-  
-              <h4>Compañia</h4>
-              <ul>
-                <li><a href="Nosotros.html">Nosotros</a></li>
-                <li><a href="#">Nuestros servicios</a></li>
-                <li><a href="#">Politica de privacidad</a></li>
-                <li><a href="#">Unete</a></li>
-              </ul>
-  
-            </div>
-            <div class="footer-links">
-  
-              <h4>Ayuda</h4>
-              <ul>
-                <li><a href="#">Preguntas</a></li>
-                <li><a href="#">Compras</a></li>
-                <li><a href="#">Envios</a></li>
-                <li><a href="#">Estatus de origen</a></li>
-                <li><a href="#">Pagos</a></li>           
-              </ul>
-  
-            </div>
-            <div class="footer-links">
-  
-              <h4>Tienda</h4>
-              <ul>
-                <li><a href="#">Manga</a></li>
-                <li><a href="#">Separadores</a></li>
-                <li><a href="#">Comics</a></li>
-                <li><a href="#">Ropa</a></li>
-              </ul>
-  
-            </div>
-            <div class="footer-links">
-  
-              <h4>Contacto</h4>
-              <div class="social-link">
-               <a href="" target="_blank"><i class="fab fa-facebook-f"></i></a>
-               <a href="" target="_blank"><i class="fab fa-instagram"></i></a>
-               <a href="https://twitter.com/KuruMangas" target="_blank"><i class="fab fa-twitter"></i></a>
-               <a href="" target="_blank"><i class="fa-solid fa-envelope"></i></a>
-              </div>
-  
-            </div>
-  
+      <div class="container2">
+        <div class="footer-row">
+          <div class="footer-links">
+            <h4>Compañia</h4>
+            <ul>
+              <li><a href="Nosotros.html">Nosotros</a></li>
+              <li><a href="#">Nuestros servicios</a></li>
+              <li><a href="#">Politica de privacidad</a></li>
+              <li><a href="#">Unete</a></li>
+            </ul>
           </div>
-  
+          <div class="footer-links">
+            <h4>Ayuda</h4>
+            <ul>
+              <li><a href="#">Preguntas</a></li>
+              <li><a href="#">Compras</a></li>
+              <li><a href="#">Envios</a></li>
+              <li><a href="#">Estatus de origen</a></li>
+              <li><a href="#">Pagos</a></li>
+            </ul>
+          </div>
+          <div class="footer-links">
+            <h4>Tienda</h4>
+            <ul>
+              <li><a href="#">Manga</a></li>
+              <li><a href="#">Separadores</a></li>
+              <li><a href="#">Comics</a></li>
+              <li><a href="#">Ropa</a></li>
+            </ul>
+          </div>
+          <div class="footer-links">
+            <h4>Contacto</h4>
+            <div class="social-link">
+              <a
+                href="https://www.instagram.com/kurumangas?utm_source=ig_web_button_share_sheet&igsh=MzJiMzQ5ZWQ2Mw== "
+                target="_blank"
+                ><i class="fab fa-instagram"></i
+              ></a>
+              <a
+                href="https://www.facebook.com/people/Kuru-Mangas/pfbid02cDtnRDqFjepoNicQhkuEwfjNtDgUdV3WVHALkVENBucxR7cX1reT9cbi6jdZfxDzl/"
+                target="_blank"
+                ><i class="fab fa-facebook-f"></i
+              ></a>
+              <a href="https://twitter.com/KuruMangas" target="_blank"
+                ><i class="fab fa-twitter"></i
+              ></a>
+            </div>
+          </div>
         </div>
-  
-      </footer>
-      
-</body>
+      </div>
+    </footer>
+  </body>
 </html>
