--- a/Novedades.html
+++ b/Novedades.html
@@ -18,7 +18,6 @@
     />
   </head>
   <body>
-    <script src="index.js"></script>
     <header>
       <nav>
         <div id="logo">
@@ -54,8 +53,8 @@
             <div class="cart-product">
               <div class="info-cart-product">
                 <span class="cantidad-producto-carrito">1</span>
-                <p class="titulo-producto-carrito">Zapatos Nike</p>
-                <span class="precio-producto-carrito">$80</span>
+                <p class="titulo-producto-carrito">The Horizon 01</p>
+                <span class="precio-producto-carrito">$24.500</span>
               </div>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -74,7 +73,7 @@
             </div>
             <div class="cart-total">
               <h3>Total:</h3>
-              <span class="total-pagar">$200</span>
+              <span class="total-pagar">$24.500</span>
             </div>
           </div>
         </div>
@@ -615,5 +614,7 @@
         </div>
       </div>
     </footer>
+    <script src="index.js"></script>
+
   </body>
 </html>
