--- a/index.html
+++ b/index.html
@@ -35,21 +35,52 @@
           <a href="Promociones.html">Promociones</a>
           <a href="Nosotros.html">Nosotros</a>
         </div>
-        <div class="shopping-cart">
+        <div class="container-icon">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewBox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
-            class="icono-shop"
+            class="icon-cart"
           >
             <path
               stroke-linecap="round"
               stroke-linejoin="round"
-              d="M15.75 10.5V6a3.75 3.75 0 1 0-7.5 0v4.5m11.356-1.993 1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 0 1-1.12-1.243l1.264-12A1.125 1.125 0 0 1 5.513 7.5h12.974c.576 0 1.059.435 1.119 1.007ZM8.625 10.5a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm7.5 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Z"
+              d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z"
             />
           </svg>
+          <div class="count-products">
+            <span id="contador-productos">0</span>
+          </div>
+
+          <div class="container-cart-products hidden-cart">
+            <div class="cart-product">
+              <div class="info-cart-product">
+                <span class="cantidad-producto-carrito">1</span>
+                <p class="titulo-producto-carrito">The Horizon 01</p>
+                <span class="precio-producto-carrito">$24.500</span>
+              </div>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="icon-close"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M6 18L18 6M6 6l12 12"
+                />
+              </svg>
+            </div>
+            <div class="cart-total">
+              <h3>Total:</h3>
+              <span class="total-pagar">$24.500</span>
+            </div>
+          </div>
         </div>
       </nav>
 
@@ -382,10 +413,11 @@
               <li><a href="#">Separadores</a></li>
               <li><a href="#">Comics</a></li>
               <li><a href="#">Ropa</a></li>
-              <li ><a href="#">contactos<a></li>
+              <li><a href="#">contactos<a></li>
             </ul>
 
           </div>
+
           <div class="footer-links">
 
             <h4>Contacto</h4>
@@ -402,6 +434,6 @@
       </div>
 
     </footer>
-    
+    <script src="index.js"></script>
   </body>
 </html>
