--- a/Catalogo.html
+++ b/Catalogo.html
@@ -28,7 +28,7 @@
     <header>
       <nav>
         <div id="logo">
-          <img src="imagenes/logo2pagina.svg" alt="logo" />
+          <a href="index.html"><img src="imagenes/logo2pagina.svg" alt="logo" /></a>
         </div>
         <div id="links">
           <a href="index.html">Inicio</a>
