--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header>
       <nav>
         <div id="logo">
-          <img src="imagenes/logo2pagina.svg" alt="logo" />
+          <a href="index.html"><img src="imagenes/logo2pagina.svg" alt="logo" /></a>
         </div>
         <div id="links">
           <a href="index.html">Inicio</a>
@@ -421,9 +421,12 @@
 
             <h4>Contacto</h4>
             <div class="social-link">
-             <a href="https://www.facebook.com/people/Kuru-Mangas/pfbid02cDtnRDqFjepoNicQhkuEwfjNtDgUdV3WVHALkVENBucxR7cX1reT9cbi6jdZfxDzl/" target="_blank"><i class="fab fa-facebook-f"></i></a>
-             <a href="https://www.instagram.com/kurumangas" target="_blank"><i class="fab fa-instagram"></i></a>
-             <a href="https://twitter.com/KuruMangas" target="_blank"><i class="fab fa-twitter"></i></a>
+              <div >
+                <a href="contactanos.html" class="contactanos">Escribénos</a>
+              </div>
+             <a class="social" href="https://www.facebook.com/people/Kuru-Mangas/pfbid02cDtnRDqFjepoNicQhkuEwfjNtDgUdV3WVHALkVENBucxR7cX1reT9cbi6jdZfxDzl/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+             <a class="social" href="https://www.instagram.com/kurumangas" target="_blank"><i class="fab fa-instagram"></i></a>
+             <a class="social" href="https://twitter.com/KuruMangas" target="_blank"><i class="fab fa-twitter"></i></a>
             </div>
 
           </div>
