--- a/Promociones.html
+++ b/Promociones.html
@@ -20,7 +20,7 @@
     <header>
         <nav>
           <div id="logo">
-            <img src="imagenes/logo2pagina.svg" alt="logo" />
+            <a href="index.html"><img src="imagenes/logo2pagina.svg" alt="logo" /></a>
           </div>
           <div id="links">
             <a href="index.html">Inicio</a>
