se borro la seccion de comentario y se reemplaza por seccion de registro y login de usuario

--- a/Nosotros.html
+++ b/Nosotros.html
@@ -141,19 +141,12 @@
           <div class="footer-links">
             <h4>Contacto</h4>
             <div class="social-link">
-              <a
-                href="https://www.instagram.com/kurumangas?utm_source=ig_web_button_share_sheet&igsh=MzJiMzQ5ZWQ2Mw== "
-                target="_blank"
-                ><i class="fab fa-instagram"></i
-              ></a>
-              <a
-                href="https://www.facebook.com/people/Kuru-Mangas/pfbid02cDtnRDqFjepoNicQhkuEwfjNtDgUdV3WVHALkVENBucxR7cX1reT9cbi6jdZfxDzl/"
-                target="_blank"
-                ><i class="fab fa-facebook-f"></i
-              ></a>
-              <a href="https://twitter.com/KuruMangas" target="_blank"
-                ><i class="fab fa-twitter"></i
-              ></a>
+              <div >
+                <a href="contactanos.html" class="contactanos">Escribénos</a>
+              </div>
+             <a class="social" href="https://www.facebook.com/people/Kuru-Mangas/pfbid02cDtnRDqFjepoNicQhkuEwfjNtDgUdV3WVHALkVENBucxR7cX1reT9cbi6jdZfxDzl/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+             <a class="social" href="https://www.instagram.com/kurumangas" target="_blank"><i class="fab fa-instagram"></i></a>
+             <a class="social" href="https://twitter.com/KuruMangas" target="_blank"><i class="fab fa-twitter"></i></a>
             </div>
           </div>
         </div>
