--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     ></script>
 
     <header>
+      <div class="login-register">
+        <a href="registro.html">Registrarse/ </a><a href="login"> Iniciar sesión</a>
+      </div>
       <nav>
         <div id="logo">
           <a href="index.html"><img src="imagenes/logo2pagina.svg" alt="logo" /></a>
@@ -81,7 +84,7 @@
               <span class="total-pagar">$24.500</span>
             </div>
           </div>
-        </div>
+        </div>  
       </nav>
 
       <div id="carouselExample" class="carousel slide">
