--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <header>
       <div class="login-register">
-        <a href="registro.html">Registrarse/ </a><a href="login"> Iniciar sesión</a>
+        <a href="registro.html">Registrarse/ </a><a href="login.html"> Iniciar sesión</a>
       </div>
       <nav>
         <div id="logo">
